buildscript {
    repositories {
        mavenCentral()
        maven { url = "https://oss.sonatype.org/content/groups/public"}
    }
}

plugins {
    id 'groovy'
    id 'java'
    id 'pl.allegro.tech.build.axion-release' version '1.18.17'
    id 'maven-publish'
}

group = 'com.rundeck.plugins'

scmVersion {
    ignoreUncommittedChanges = false
    tag {
        prefix = ''           // NO "v" prefix - see PLUGIN_TAGGING_ARCHITECTURE.md
        versionSeparator = ''
    }
    versionCreator 'simple'  // Use simple version creator (just tag name)
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

version = scmVersion.version  // Dynamic version from git tag

configurations{
    //declare custom pluginLibs configuration to include only libs for this plugin
    pluginLibs

    //declare compile to extend from pluginLibs so it inherits the dependencies
    implementation{
        extendsFrom pluginLibs
    }
}


repositories {
    mavenLocal()
    maven {
        name = 'Central Portal Snapshots'
        url = 'https://central.sonatype.com/repository/maven-snapshots/'
        content {
            includeGroup('org.rundeck')
        }
    }
    maven {
        name = 'Central Portal Snapshots'
        url = 'https://central.sonatype.com/repository/maven-snapshots/'
        
        // Only search this repository for org.rundeck snapshots
        content {
            includeGroup('org.rundeck')
        }
    }
    mavenCentral()
}

dependencies {

    implementation 'org.apache.groovy:groovy-all:4.0.29'
    implementation(group:'org.rundeck', name: 'rundeck-core', version: '6.0.0-SNAPSHOT') {
        exclude group: 'commons-lang', module: 'commons-lang'
    }
    // Add secure replacement for excluded commons-lang
    implementation 'org.apache.commons:commons-lang3:3.17.0'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.3'

    pluginLibs 'com.squareup.retrofit2:retrofit:2.9.0'

    pluginLibs "com.google.code.gson:gson:2.10.1"
    pluginLibs (group: 'com.squareup.retrofit2', name: 'converter-gson', version: "2.9.0") {
        exclude group: 'com.google.code.gson', module: 'gson'
    }

    constraints {
        // Pins the version to avoid  a dependency on okhttp 3.14.9 that suffers from the CVE.
        // This version of okhttp is inline with the one used in Rundeck 5.9.x
        pluginLibs('com.squareup.okhttp3:okhttp:4.12.0') {
            because "CVE-2023-3635"
        }
        

    }

}

// task to copy plugin libs to output/lib dir
task copyToLib(type: Copy) {
    into "$buildDir/output/lib"
    from configurations.pluginLibs
}

jar {
    //include contents of output dir
    from "$buildDir/output"
    manifest {
        attributes 'Rundeck-Plugin-Name' : 'PagerDuty Notification'
        attributes 'Rundeck-Plugin-Description' : 'Sends trigger events to your PagerDuty service'
        attributes 'Rundeck-Plugin-Rundeck-Compatibility-Version': '5.15.0+'
        attributes 'Rundeck-Plugin-Tags': 'java,notification,pagerduty'
        attributes 'Rundeck-Plugin-License': 'Apache 2.0'
        attributes 'Rundeck-Plugin-Source-Link': 'https://github.com/rundeck-plugins/pagerduty-notification'
        attributes 'Rundeck-Plugin-Target-Host-Compatibility': 'all'
        attributes 'Rundeck-Plugin-Version': '1.2', 'Rundeck-Plugin-Archive': 'true','Rundeck-Plugin-File-Version': "${project.version}"
        //create space-separated list of pluginLibs
        def libList = configurations.pluginLibs.collect{'lib/'+it.name}.join(' ')
        attributes 'Rundeck-Plugin-Classnames': 'com.rundeck.plugins.PagerDutyNotificationPlugin', 'Rundeck-Plugin-Libs': "${libList}"
    }
}

//set jar task to depend on copyToLib
jar.dependsOn(copyToLib)

test {
    useJUnitPlatform()
    
    // Java 17+ module access
    jvmArgs = [
        '--add-opens=java.base/java.lang=ALL-UNNAMED',
        '--add-opens=java.base/java.util=ALL-UNNAMED',
        '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
    ]
}

publishing {
    publications {
        maven(MavenPublication) {
            groupId = 'com.rundeck.plugins'
            artifactId = 'pagerduty-notification'
            version = project.version
            from components.java
        }
    }
    
    repositories {
        maven {
            name = "PackageCloudTest"
            url = uri("https://packagecloud.io/pagerduty/rundeckpro-test/maven2")
            authentication {
                header(HttpHeaderAuthentication)
            }
            credentials(HttpHeaderCredentials) {
                name = "Authorization"
                value = "Bearer " + (System.getenv("PKGCLD_WRITE_TOKEN") ?: project.findProperty("pkgcldWriteToken"))
            }
        }
    }
}
